--- a/TelegramBot/dispatcher/pom.xml
+++ b/TelegramBot/dispatcher/pom.xml
@@ -15,7 +15,7 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <telegrambot.starter.version>5.0.1</telegrambot.starter.version>
+        <telegrambot.starter.version>6.1.0</telegrambot.starter.version>
         <lombok.version>1.18.22</lombok.version>
     </properties>
 
@@ -29,6 +29,11 @@
             <groupId>org.telegram</groupId>
             <artifactId>telegrambots-spring-boot-starter</artifactId>
             <version>${telegrambot.starter.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.vovabuzivskyi</groupId>
+            <artifactId>common-rabbitmq</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
 
 
