--- a/TelegramBot/pom.xml
+++ b/TelegramBot/pom.xml
@@ -11,6 +11,7 @@
   <url>http://maven.apache.org</url>
   <modules>
     <module>dispatcher</module>
+    <module>common-rabbitmq</module>
   </modules>
 
   <properties>
@@ -40,7 +41,7 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <version>${lombok.version}</version>
+      <version>1.18.22</version>
       <scope>provided</scope>
     </dependency>
 
